<resources>
    <string name="app_name">Student management</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="profile">Profile</string>
    <string name="setting">Settings</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="registration">Registration</string>
    <string name="title_activity_sitting">SittingActivity</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="image">Image</string>
    <string name="dashboard">Dashboard</string>
    <string name="student">Student Management System. </string>

</resources>