<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView_reg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_design"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:id="@+id/layout_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/registration"
            android:textColor="@color/purple_700"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/registration_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:src="@drawable/registration"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@color/green_120"
            android:hint="@string/name"
            android:padding="10dp"
            android:textStyle="bold"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@color/green_120"
            android:hint="@string/email"
            android:padding="10dp"
            android:textStyle="bold"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@color/green_120"
            android:hint="@string/password"
            android:padding="10dp"
            android:textStyle="bold"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/address_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@color/green_120"
            android:hint="@string/address"
            android:padding="10dp"
            android:textStyle="bold"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:id="@+id/registration_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTint="@color/green_120"
            android:padding="10dp"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/black"/>

    </LinearLayout>

</ScrollView>