<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/indigo"
            android:textSize="30sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:src="@drawable/login"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/emailLog_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@color/indigo"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_10"
            android:textStyle="normal"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/passwordLog_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@color/indigo"
            android:hint="@string/password"
            android:padding="8dp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_10"
            android:textStyle="normal"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTint="@color/orange"
            android:padding="10dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/click_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="40dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:background="@color/yellow"/>

    </LinearLayout>

</ScrollView>